tests/snapshots/valid_samples__nested_layout.snap
---
source: tests/valid_samples.rs
expression: output
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:w-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-windows-msvc"

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare ptr @llvm.stacksave() #0

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare void @llvm.stackrestore(ptr) #0

define i32 @main() {
entry:
  %0 = call ptr @llvm.stacksave()
  %1 = alloca [12 x i8], align 4
  %2 = getelementptr [12 x i8], ptr %1, i32 0, i32 0
  store i32 1, ptr %2, align 4
  %3 = getelementptr [12 x i8], ptr %1, i32 0, i32 4
  store i32 123, ptr %3, align 4
  %4 = getelementptr [12 x i8], ptr %1, i32 0, i32 8
  store i32 8, ptr %4, align 4
  %5 = getelementptr [12 x i8], ptr %1, i32 0, i32 4
  %6 = load i32, ptr %5, align 4
  call void @llvm.stackrestore(ptr %0)
  ret i32 %6
}

attributes #0 = { nocallback nofree nosync nounwind willreturn }
