tests/snapshots/valid_samples__pointer.snap
---
source: tests/valid_samples.rs
expression: output
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:w-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-windows-msvc"

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare ptr @llvm.stacksave() #0

; Function Attrs: nocallback nofree nosync nounwind willreturn
declare void @llvm.stackrestore(ptr) #0

define i32 @main() {
entry:
  %0 = call ptr @llvm.stacksave()
  %1 = alloca i32, align 4
  store i32 999, ptr %1, align 4
  %2 = alloca ptr, align 8
  store ptr %1, ptr %2, align 8
  %3 = load i32, ptr %2, align 4
  %4 = add i32 %3, 1
  store i32 %4, ptr %2, align 4
  %5 = load i32, ptr %1, align 4
  call void @llvm.stackrestore(ptr %0)
  ret i32 %5
}

attributes #0 = { nocallback nofree nosync nounwind willreturn }

